[project]
name = "fv-ai-codegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deal>=4.24.4",
    "deal-solver>=0.1.2",
    "hypothesis>=6.127.3",
    "numpy>=2.2.3",
    "ollama>=0.4.7",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
